<resources>
    <string name="app_name">Trip it</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alexandru_paul_sirbu">Alexandru-Paul Sirbu</string>
    <string name="alexandru_sirbu2104_gmail_com">alexandru.sirbu2104@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="trip_image">Trip image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="trip_type">Trip type</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="start_date">Start date</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="end_date">End date</string>
    <string name="rating">Rating</string>
    <string name="favourite">Favourite</string>
    <string name="period">Period</string>
    <string name="latitude_of_the_location">Latitude of the location</string>
    <string name="longitude_of_the_location">Longitude of the location</string>
    <string name="weather">Weather</string>
    <string name="show">Show</string>
</resources>