<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.alexsirbu.tripit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.alexsirbu.tripit.ui.about_us.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.alexsirbu.tripit.ui.contact.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.alexsirbu.tripit.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />
</navigation>